// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`allows custom classes 1`] = `
<div>
  <button
    class="
      button
      blah
    "
  >
    custom class
  </button>
</div>
`;

exports[`renders the expected classes 1`] = `
<div>
  <button
    class="
      button
      
    "
  >
    hello world
  </button>
</div>
`;
